--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -60,10 +60,6 @@
         <item name="android:background">@drawable/roundedborder</item>
     </style>
 
-    <style name="SplashTheme" parent="Theme.AppCompat.DayNight" >
-        <item name="android:windowBackground">@drawable/splash_background</item>
-    </style>
-
     <!-- Base application theme. -->
     <style name="MFBTheme" parent="Theme.AppCompat.DayNight">
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -73,5 +69,19 @@
         <item name="android:background">@color/colorBackground</item>
         <item name="android:windowBackground">@color/colorBackground</item>
         <item name="android:colorBackground">@color/colorBackground</item>
+    </style>
+
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        // Set the splash screen background, animated icon, and animation duration.
+        <item name="windowSplashScreenBackground">@color/splash_background</item>
+
+        // Use windowSplashScreenAnimatedIcon to add either a drawable or an
+        // animated drawable. One of these is required.
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_app_round</item>
+        <item name="windowSplashScreenAnimationDuration">200</item>  # Required for
+        # animated icons
+
+        // Set the theme of the Activity that directly follows your splash screen.
+        <item name="postSplashScreenTheme">@style/MFBTheme</item>  # Required.
     </style>
 </resources>
