--- a/app/src/main/res/menu/mfbexistingflightmenu.xml
+++ b/app/src/main/res/menu/mfbexistingflightmenu.xml
@@ -44,6 +44,10 @@
         android:title="@string/menuShareFlight"
         android:titleCondensed="@string/menuShareFlightShort" />
     <item
+        android:id="@+id/menuChooseTemplate"
+        android:title="@string/menuChooseTemplate"
+        android:titleCondensed="@string/menuChooseTemplateShort" />
+    <item
         android:id="@+id/btnDeleteFlight"
         android:icon="@drawable/ic_action_discard"
         android:title="@string/menuDeleteFlight"
