--- a/app/src/main/res/layout/dlgsignin.xml
+++ b/app/src/main/res/layout/dlgsignin.xml
@@ -72,6 +72,13 @@
             />
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtWarning"
+        android:textSize="11sp"
+        android:text="@string/lblWarning2"  />
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
