Fix issue #250 (indirectly #248) - add autofill  - Create synthetic telemetry, if appropriate.  - Cleaned up GPSSim's samples - in debug, don't fill memory with pointless array  - Move autototal and autohobbs (mostly) into LogbookEntry  - support autofill of ground instruction and cost-of-flight   - LogbookEntry adds "addOrSetPropertyValue" and "RemovePropertyWithID" method.  Property management is a disaster, but if I move away from SQL for this, should be able to clean up more.   - Added ability to detect file type and to parse a string (not just a URI).   - Updated copyright strings to 2022

--- a/app/src/main/res/menu/mfbnewflightmenu.xml
+++ b/app/src/main/res/menu/mfbnewflightmenu.xml
@@ -42,4 +42,8 @@
         android:id="@+id/menuResetFlight"
         android:title="@string/menuResetFlight"
         android:titleCondensed="@string/menuResetFlightShort" />
+    <item
+        android:id="@+id/btnAutoFill"
+        android:title="@string/menuAutoFill"
+        app:showAsAction="ifRoom" />
 </menu>
