--- a/app/src/main/res/menu/mfbqueuedflightmenu.xml
+++ b/app/src/main/res/menu/mfbqueuedflightmenu.xml
@@ -34,6 +34,10 @@
         android:title="@string/menuChooseTemplate"
         android:titleCondensed="@string/menuChooseTemplateShort" />
     <item
+        android:id="@+id/btnAutoFill"
+        android:title="@string/menuAutoFill"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/btnDeleteFlight"
         android:icon="@drawable/ic_action_discard"
         android:title="@string/menuDeleteFlight"
