--- a/app/src/main/res/xml/backup_descriptor.xml
+++ b/app/src/main/res/xml/backup_descriptor.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <full-backup-content>
+    <include domain="sharedpref" path="."/>
     <!-- Remove the following "exclude" elements to make them a part of the auto backup -->
     <!-- Exclude the shared preferences file that contains the GCM registrationId -->
     <exclude
