Show progress for pack-and-go in-line, not in progressdialog.  - doAsync now takes (optionally) a progress bar and/or a textview and will use those if provided.  It will only show a progress dialog if (a) a status message is provided AND (b) no textview/progressbar is provided.  doAsync shows/hides the progressbar and TextView   - Fixed formatting of the time of last pack

--- a/app/src/main/res/layout-land/options.xml
+++ b/app/src/main/res/layout-land/options.xml
@@ -383,6 +383,22 @@
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/lblLastPacked" />
 
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/prgBarPackAndGo"
+                android:indeterminate="false"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:visibility="gone"
+                android:max="6"
+                android:progress="0" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/lblPackProgress"
+                android:visibility="gone"
+                android:layout_gravity="center_horizontal" />
+
         </LinearLayout>
 
         <TextView
